--- a/site/index.html
+++ b/site/index.html
@@ -1,11 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hello World</title>
 </head>
+
 <body>
-    <h1>Hello Im using git.</h1>
+    <div>Dear all,
+        <span>I took this really cool course
+        </span></div>
+    <span>on Coursera.org. I think it's
+        my favorite course I've EVER taken!
+        Here is the URL for it:
+    </span>
+    <a href="...">HTML, CSS and JS for Web Developers</a>
+    <div>
+        Does anyone know how I can give this course 6
+        out of 5 stars?
+    </div>
+    <div>
+        Thank you,
+        -Yaakov.... I mean a random student! Definitely not Yaakov.
+    </div>
 </body>
+
 </html>
